--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
 
   <main>
-    <h2>Featured Products</h2>
+    <h2>Ravi's Featured Products</h2>
     <div class="product-grid">
       <div class="product">
         <img src="https://via.placeholder.com/150" alt="Product 1">
